# embedded_rust_discovery_board

./: Cargo.toml  README.md
.cargo/: config
i2c/: Cargo.toml
i2c/src/: main.rs
led_compass/: Cargo.toml  Embed.toml
led_compass/src/: calibration.rs  led.rs  main.rs
led_roulette/: Cargo.toml  Embed.toml  build.rs
led_roulette/src/: main.rs
punchometer/: Cargo.toml
punchometer/src/: main.rs
setup/: Cargo.toml  Embed.toml
uart/: Cargo.toml
uart/src/: main.rs  serial_setup.rs
