[package]
name = "punchometer"
version = "0.1.0"
authors = ["Krishna Addepalli <coolkrishna31@gmail.com"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.microbit-v2]
version = "0.13.0"
optional = true

[dependencies.microbit]
version = "0.13.0"
optional = true

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
rtt-target = {version = "0.3.1", features = ["cortex-m"]}
panic-rtt-target = {version = "0.1.2", features = ["cortex-m"]}
lsm303agr = "0.2.2"
libm = "0.2.6"
embedded-hal = "0.2.7"
nb = "0.1.3"

[features]
v2 = ["microbit-v2"]
v1 = ["microbit"]
