[package]
name = "uart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
rtt-target = {version= "0.3.1", features=["cortex-m"]}
panic-rtt-target = {version="0.1.2", features=["cortex-m"]}
nb = "1.0.0"
embedded-hal = "0.2.7"
heapless = "0.7.16"

[dependencies.microbit-v2]
version = "0.13.0"
optional = true

[dependencies.microbit]
version = "0.13.0"
optional = true



[features]
v2 = ["microbit-v2"]
v1 = ["microbit"]
